output.txt
In file included from /usr/include/c++/4.8/ios:42:0,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from filereader.cpp:2:
/usr/include/c++/4.8/bits/ios_base.h: In copy constructor ‘std::basic_ios<char>::basic_ios(const std::basic_ios<char>&)’:
/usr/include/c++/4.8/bits/ios_base.h:792:5: error: ‘std::ios_base::ios_base(const std::ios_base&)’ is private
     ios_base(const ios_base&);
     ^
In file included from /usr/include/c++/4.8/ios:44:0,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from filereader.cpp:2:
/usr/include/c++/4.8/bits/basic_ios.h:66:11: error: within this context
     class basic_ios : public ios_base
           ^
In file included from filereader.cpp:3:0:
/usr/include/c++/4.8/fstream: In copy constructor ‘std::basic_ifstream<char>::basic_ifstream(const std::basic_ifstream<char>&)’:
/usr/include/c++/4.8/fstream:427:11: note: synthesized method ‘std::basic_ios<char>::basic_ios(const std::basic_ios<char>&)’ first required here
     class basic_ifstream : public basic_istream<_CharT, _Traits>
           ^
In file included from /usr/include/c++/4.8/ios:43:0,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from filereader.cpp:2:
/usr/include/c++/4.8/streambuf: In copy constructor ‘std::basic_filebuf<char>::basic_filebuf(const std::basic_filebuf<char>&)’:
/usr/include/c++/4.8/streambuf:802:7: error: ‘std::basic_streambuf<_CharT, _Traits>::basic_streambuf(const std::basic_streambuf<_CharT, _Traits>&) [with _CharT = char; _Traits = std::char_traits<char>]’ is private
       basic_streambuf(const basic_streambuf& __sb)
       ^
In file included from filereader.cpp:3:0:
/usr/include/c++/4.8/fstream:72:11: error: within this context
     class basic_filebuf : public basic_streambuf<_CharT, _Traits>
           ^
/usr/include/c++/4.8/fstream: In copy constructor ‘std::basic_ifstream<char>::basic_ifstream(const std::basic_ifstream<char>&)’:
/usr/include/c++/4.8/fstream:427:11: note: synthesized method ‘std::basic_filebuf<char>::basic_filebuf(const std::basic_filebuf<char>&)’ first required here
     class basic_ifstream : public basic_istream<_CharT, _Traits>
           ^
In file included from filereader.cpp:4:0:
parser.h: In copy constructor ‘Parser::Parser(const Parser&)’:
parser.h:20:7: note: synthesized method ‘std::basic_ifstream<char>::basic_ifstream(const std::basic_ifstream<char>&)’ first required here
 class Parser {
       ^
filereader.cpp: In function ‘int main(int, char**)’:
filereader.cpp:10:34: note: synthesized method ‘Parser::Parser(const Parser&)’ first required here
  Parser parse = Parser("file.txt");
                                  ^
meminstr.cpp: In constructor ‘MemInstr::MemInstr()’:
meminstr.cpp:6:7: warning: converting to non-pointer type ‘long int’ from NULL [-Wconversion-null]
  addr = NULL;
       ^
meminstr.cpp: In member function ‘int MemInstr::SetAddr(std::string)’:
meminstr.cpp:67:55: error: ‘nullptr’ was not declared in this scope
  addr = stol(address.substr(2, (address.length()-2)), nullptr, 16);
                                                       ^
meminstr.cpp:67:66: error: ‘stol’ was not declared in this scope
  addr = stol(address.substr(2, (address.length()-2)), nullptr, 16);
                                                                  ^
parser.cpp: In member function ‘int Parser::OpenFile()’:
parser.cpp:101:25: error: no matching function for call to ‘std::basic_ifstream<char>::open(std::string&)’
   dataFile.open(fileName);
                         ^
parser.cpp:101:25: note: candidate is:
In file included from parser.h:9:0,
                 from parser.cpp:1:
/usr/include/c++/4.8/fstream:538:7: note: void std::basic_ifstream<_CharT, _Traits>::open(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]
       open(const char* __s, ios_base::openmode __mode = ios_base::in)
       ^
/usr/include/c++/4.8/fstream:538:7: note:   no known conversion for argument 1 from ‘std::string {aka std::basic_string<char>}’ to ‘const char*’